done, missing serial if need for more photos

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,24 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/uploadButton"
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="176dp"
+        android:onClick="uploadButton"
+        android:text="Upload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
         android:id="@+id/addCamera"
         android:layout_width="110dp"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="75dp"
+        android:onClick="cameraButton"
         android:text="Camera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/addPhotoroll"
@@ -26,6 +39,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <Button
@@ -33,6 +48,7 @@
         android:layout_width="110dp"
         android:layout_height="50dp"
         android:layout_marginTop="72dp"
+        android:onClick="galleryButton"
         android:text="Photoroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.179"
